Make disabling accelerated VPX decoding a GPU driver bug workaround.

This is currently a blacklist entry, which means that it's calculated in
the browser and the resulting decision could be incorrect if the GPU
process uses a different GPU from what the browser expects. If this is
a GPU driver bug workaround entry then it'll be determined with more
information in the GPU process.

TBR=zmo@chromium.org
BUG=687004,712006
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2682723003
Cr-Original-Commit-Position: refs/heads/master@{#469513}
Review-Url: https://codereview.chromium.org/2888233002 .
Cr-Commit-Position: refs/branch-heads/3071@{#623}
Cr-Branched-From: a106f0abbf69dad349d4aaf4bcc4f5d376dd2377-refs/heads/master@{#464641}